<resources>
    <string name="app_name">PlayEDU</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="remind_pass">Напомнить пароль</string>
    <string name="FIO_hint">ФИО</string>
    <string name="group_hint">Группа</string>
    <string name="enter_title">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="reg_title">Регистрация</string>
    <string name="pass_hint">Пароль</string>
    <string name="remind">Напомнить</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="repeat_pass_hint">Повторите пароль</string>
    <string name="magician_male_title">Маг</string>
    <string name="magician_female_title">Волшебница</string>
    <string name="magician_male_description">Lorem ipsum dolor sit amet consectetur. Praesent lectus pulvinar lorem ut proin enim odio. Eu id arcu dictum pretium quisque tristique.</string>
    <string name="choose_magician_title">Выбери своего героя</string>
    <string name="user_greetings_pass">Привет, Михаил!</string>
    <string name="user_gold_coin_pass">1200</string>
    <string name="choose">Выбрать</string>

    <string name="quests">Квесты</string>
    <string name="adventure">Приключение</string>
    <string name="community">Сообщество</string>
    <string name="profile">Профиль</string>
    <string name="pe_tasks">Задания от PlayEdu</string>
    <string name="your_tasks">Твои задания</string>
    <string name="pick_required_color">Выбери нужный цвет задачи</string>
    <string name="pick_list">Выбери нужный список</string>
    <string name="filter">Фильтр</string>
    <string name="add_task">Добавление нового задания</string>
    <string name="title">Название</string>
    <string name="list">Список</string>
    <string name="add_task_hint">Введи награду за выполнение и дедлайн</string>
    <string name="pick_task_color">Выбери цвет задания</string>
    <string name="add">Добавить</string>
    <string name="price_error_too_much">Не более 100 монет</string>
    <string name="price_hint">20</string>
    <string name="delete_task_header">Ты уверен, что хочешь удалить задание?</string>
    <string name="complete_task_header">Отметить задание выполненным?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="statistic_title">Статистика</string>
    <string name="play_edu_compl_count">Заданий от PlayEdu выполнено</string>
    <string name="tasks_compl_count">Собственных заданий выполнено</string>
    <string name="kills_count">Монстров убито</string>
    <string name="show_more_title">Показать больше</string>
    <string name="powers_title">Силы</string>
    <string name="achievements_title">Достижения</string>
    <string name="leaderboard_title">Доска лидеров</string>
    <string name="price">Цена:</string>
    <string name="buy">Купить</string>
    <string name="use_power">Использовать</string>
    <string name="start_adventure">Начать приключение?</string>
    <string name="characteristics">Показатели:</string>
    <string name="damage">Урон:</string>
    <string name="health">Здоровье:</string>
    <string name="pick_powers">Выбери силы:</string>
    <string name="start">Начать</string>

    <string name="damage_done">Нанесен урон:</string>
    <string name="no_damage">Вы не смогли нанести урон и открылись для противника. Фаза защиты стала сложнее на 15% процентов!</string>
    <string name="no_damage_poison_power">Вы не смогли нанести урон, однако успели отравить противника. Негативные эффекты не начисляются!</string>
    <string name="victory">Победа!</string>
    <string name="defeat">К сожалению, вы проиграли</string>
    <string name="attack">Атака</string>
    <string name="defense">Защита</string>
    <string name="new_fight">Новый бой</string>
    <string name="award">Награда:</string>
    <string name="no_damage_to_player">Вам не был нанесен урон</string>
    <string name="no_damage_ice_power">Враг столбенел! Вам не был нанесен урон</string>
    <string name="mistake_title">В последний момент вы замедлили ход времени. Негативные эффекты фазы защиты/атаки не засчитываются!</string>
    <string name="health_title">Вы использовали древнее исцеляющее заклинание. Ваше здоровье востановлено на 1 единицу!</string>
    <string name="griffin_power_title">Вы использовали таинственный талисман грифона. Невероятный по силе поток магии уничтожил вашего противника. Жаль, что талисман не уцелел…</string>
    <string name="life_power_title">Вам ещё рано на тот свет! Волшебное свечение возвращает вас к жизни</string>
    <string name="enemies_left">Монстров осталось: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="min_pswrd_length">Пароль должен содержать не менее 8 символов!</string>
    <string name="max_pswrd_length">Пароль должен содержать не более 32 символов!</string>
    <string name="password_match_error">Пароли не совпадают!</string>
    <string name="bought">Куплено</string>

    <string name="mock_string">Lorem ipsum dolor sit amet consectetur.
        Adipiscing laoreet in ullamcorper et nunc. Et tincidunt nunc nisl volutpat libero at justo
        dictumst faucibus. Nisl aliquam enim gravida tempus velit accumsan. Massa velit viverra nulla
        habitant gravida. Nunc dignissim adipiscing dui amet sed at.</string>
</resources>