<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.ForgotPasswordActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.PlayEDU"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="26dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="37dp">

        <TextView
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remind_pass" />

        <EditText
            android:id="@+id/edit_txt_name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/FIO_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_txt_group"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/group_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/remindBtn"
            style="@style/DefaultButton"
            android:layout_width="@dimen/min_btn_width"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_100"
            android:text="@string/remind" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>