<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/dialog_hdr2"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/delete_task_header"
        android:textSize="@dimen/header1_txt_size" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_marginStart="20dp"
            android:id="@+id/yes_btn"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/purple_600"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/yes" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_marginEnd="20dp"
            android:id="@+id/no_btn"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/purple_600"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/no" />
    </LinearLayout>


</LinearLayout>