<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="@dimen/header1_txt_size"
                android:id="@+id/dialog_hdr"
                style="@style/Header"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/add_task" />

            <EditText
                style="@style/EditText"
                android:layout_gravity="center_horizontal"
                android:id="@+id/title_edit_txt"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/list_edit_txt"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/list"
                android:inputType="textPersonName"/>

            <TextView
                style="@style/DefaultText"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/hint_hdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_task_hint" />

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:minEms="4"
                    android:maxEms="4"
                    android:layout_marginStart="20dp"
                    android:id="@+id/price_edit_txt"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/price_hint"
                    android:inputType="number" />

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/silver_ic2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/pic_silver_coin" />


                <EditText
                    android:focusable="false"
                    android:layout_marginEnd="20dp"
                    android:drawableRight="@drawable/ic_calendar"
                    style="@style/EditText"
                    android:id="@+id/date_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />


            </LinearLayout>

            <TextView
                android:id="@+id/color_hdr"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/pick_task_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colors_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="7"
                tools:listitem="@layout/view_color">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:backgroundTint="@color/purple_600"
                android:layout_gravity="center_horizontal"
                style="@style/DefaultButton"
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>