<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.LaunchActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="60dp">

        <ImageView
            android:id="@+id/magician_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/pic_female_magician" />

        <Button
            android:id="@+id/enterBtn"
            style="@style/DefaultButton"
            android:layout_width="@dimen/min_btn_width"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple_100"
            android:text="@string/enter_title" />

        <Button
            android:id="@+id/regBtn"
            style="@style/DefaultButton"
            android:layout_width="@dimen/min_btn_width"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple_600"
            android:text="@string/reg_title" />

        <TextView
            android:id="@+id/forgotPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_pass"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>