<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseHeroActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.PlayEDU"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="26dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        tools:layout_editor_absoluteX="122dp">


        <TextView
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_magician_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/magician_card" />

                <TextView
                    style="@style/Header1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/magician_male_title"
                    />

                <TextView
                    android:layout_width="182dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/magician_male_description"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="12sp" />

                <Button
                    android:textSize="14sp"
                    android:id="@+id/enterBtn2"
                    style="@style/DefaultButton"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/purple_100"
                    android:text="@string/choose" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/female_magician_card" />

                <TextView
                    style="@style/Header1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/magician_female_title"
                    />

                <TextView
                    android:layout_width="182dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/magician_male_description"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="12sp" />

                <Button
                    android:textSize="14sp"
                    android:id="@+id/enterBtn2"
                    style="@style/DefaultButton"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/purple_100"
                    android:text="@string/choose" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>